--- a/package.json
+++ b/package.json
@@ -44,14 +44,14 @@
     "serialize-javascript": "~1.0.0"
   },
   "devDependencies": {
-    "chai": "*",
+    "benchmark": "~1.0.0",
+    "chai": "~1.10.0",
     "express": "4.x",
-    "express3-handlebars": "*",
-    "istanbul": "*",
-    "mocha": "*",
-    "mockery": "*",
-    "xunit-file": "*",
-    "benchmark": "~1.0.0"
+    "express3-handlebars": "~0.5.2",
+    "istanbul": "~0.3.5",
+    "mocha": "~2.1.0",
+    "mockery": "~1.4.0",
+    "xunit-file": "0.0.6"
   },
   "yhint": {
     "node": true,
